Bug 1877679 - Fix serialization of CameraAccessStatus enum r=pehrsons

Use ContiguousEnumSerializerInclusive providing highest legal value
instead as the CameraAccessStatus enum doesn't have a sentinel value.

Differential Revision: https://phabricator.services.mozilla.com/D200147